Rename UmCropArea to CheeseCropArea

Avoid a crash in the control center by choosing a differen name for the
cropping widget. This is an ABI break, as um_crop_area_get_type() is
exported in libcheese-gtk, so can only go into the master branch.

https://bugzilla.gnome.org/show_bug.cgi?id=697039